--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <link rel="icon" href="icon.png">
 <style>
 body{height:100vh; width:100vw; margin:0; padding:0; font-family:"Garuda",serif; font-size:12pt; color:#000; background:#fff;}
-h3{margin:0; padding:0;}
+h4{margin:0; padding:0;}
 span{font-weight:normal;}
 input{margin:0; width:100vw; padding:.4em; font-size:20pt; font-weight:bold; outline:none; color:#000; background-color:#ddd;}
 a,a:visited,a:link,a:hover,a:active{display:block; width:100vw; color:#000; text-decoration:none; margin:0; padding:10px; border:solid 1px #888; line-height:1;}
 a:hover,a:active{background-color:#ddd;}
 </style>
-<h5>เรื่องคามลำดับ <span>ฟังพระคำของพระเจ้า</span></h5>
+<h4>เรื่องคามลำดับ<br><span>ฟังพระคำของพระเจ้า</span></h4>
 <input type="search" id="search" value="" placeholder=" &#x1F50D; ค้นหา หัวข้อ/เลขที่" autocomplete autofocus>
 <script>
 const search=document.getElementById('search');
