--- a/1.html
+++ b/1.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="ะ้">
+<html lang="th">
 <title>1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง God before all</title>
 <link rel="icon" href="icon.png">
 <style>
-/*body{background-image:url(1.jpg); background-position:center; background-repeat:no-repeat; background-size:cover;}*/
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
-/*#mp3{position:absolute; z-index:0;}*/
 </style>
 <img src="1.jpg">
-<!--div id="mp3">
-	<audio src="1.mp3" autoplay preload="auto" loop>
-</div-->
 <script>
+document.addEventListener('dblclick', function(){location.href='index.html';});
+document.addEventListener('keypress', function(){location.href='index.html';});
 var t=new Audio();
 t.src='1.mp3';
 document.addEventListener("click", function(){
 	if(t.paused) t.play();
 	else t.pause();
 });
-/*
 document.addEventListener("touchstart", touchStart);
 document.addEventListener("touchend", touchEnd);
 function touchStart(e){
@@ -29,7 +25,7 @@ function touchStart(e){
 }
 function touchEnd(e){
 	const touchEndTime=Date.now();
-	swipe(e, touchEndTime - touchStartTime);
+	swipe(e, touchEndTime-touchStartTime);
 }
 const DURATION_THRESHOLD=500;
 const MOVE_THRESHOLD=100;
@@ -37,20 +33,10 @@ function swipe(e, duration){
 	const endX=e.changedTouches[0].clientX;
 	const endY=e.changedTouches[0].clientY;
 	if(duration<=DURATION_THRESHOLD){
-		if(Y-endY>MOVE_THRESHOLD){
-			console.log('swiped up');
-			location.href='index.html';
-		}else if(endY-Y>MOVE_THRESHOLD){
-			console.log('swiped down');
-		}else if(endX-X>MOVE_THRESHOLD){
-			console.log('swiped right');
-		}else if(X-endX>MOVE_THRESHOLD){
-			console.log('swiped left');
-		}
+		if(Y-endY>MOVE_THRESHOLD) location.href='index.html';
+		else if(endY-Y>MOVE_THRESHOLD) t.currentTime=0;
+		else if(endX-X>MOVE_THRESHOLD) t.currentTime+=20;
+		else if(X-endX>MOVE_THRESHOLD) t.currentTime-=20;
 	}
 }
-*/
-//document.addEventListener('click', function(){location.href='index.html';});
-document.addEventListener('dblclick', function(){location.href='index.html';});
-document.addEventListener('keypress', function(){location.href='index.html';});
 </script>
