Use app directory

--- a/app/index.html
+++ b/app/index.html
@@ -36,3 +36,19 @@ function filter(query){
 	}
 }
 </script>
+<a href="1.html">1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง<br><i>God before all</i><br></a>
+<a href="2.html">2. พระคัมภีร์ หนังสือของพระเจ้า<br><i>Bible, book of God</i><br></a>
+<a href="3.html">3. พระเจ้าสร้างเทวาตุตา<br><i>God creates angels</i><br></a>
+<a href="4.html">4. การเนรมิตสร้างโลก<br><i>Creation</i><br></a>
+<a href="5.html">5. พระเจ้าสร้างมนุษย์<br><i>God creates mankind</i><br></a>
+<a href="6.html">6. มนุษย์ทำบาป<br><i>Mankind falls</i><br></a>
+<a href="7.html">7. การฆ่าคนอันแรก<br><i>Cain and Abel</i><br></a>
+<a href="8.html">8. น้ำท่วมโลก<br><i>Flood</i><br></a>
+<a href="9.html">9. หอบาเบล<br><i>Tower of Babel</i><br></a>
+<a href="10.html">10. พระเจ้าทรงเรียกอับราฮาม<br><i>God calls Abraham</i><br></a>
+<a href="11.html">11. อิสอัคบุตรแห่งพระสัญญา<br><i>Isaac, son of promise</i><br></a>
+<a href="12.html">12. ยาโคบ<br><i>Jacob</i><br></a>
+<a href="13.html">13. โยเซฟ<br><i>Joseph</i><br></a>
+<a href="14.html">14. โมเสส<br><i>Moses</i><br></a>
+<a href="15.html">15. ภัยพิบัติและปัสคา<br><i>Plague and Passover</i><br></a>
+<a href="16.html">16. พระเจ้าทรงแยกน้ำทะเล<br><i>God splits the sea</i><br></a>
