--- a/app/12.html
+++ b/app/12.html
@@ -5,7 +5,7 @@
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
 </style>
-<img src="12.jpg">
+<img src="12.png">
 <script>
 document.addEventListener('dblclick', function(){location.href='index.html';});
 document.addEventListener('keypress', function(){location.href='index.html';});
