--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
 <title>ฟังเรื่องคามลำดับจากพระคริสตคัมภีร์</title>
+<meta name="ฟังเรื่องคามลำดับจากพระคริสตคัมภีร์ Audio Northern Thai Bible stories">
 <meta name="copyright" content="OMF International">
 <meta name="reply-to" content="stories@godat.work">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
