--- a/app/5.html
+++ b/app/5.html
@@ -4,6 +4,10 @@
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
+@media screen and (prefers-color-scheme:dark){
+	body{background-color:#000;}
+	img{filter:invert(1);}
+}
 </style>
 <img src="5.png" id="img">
 <script>
