--- a/app/4.html
+++ b/app/4.html
@@ -4,7 +4,10 @@
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
-@media screen and (prefers-color-scheme:dark){*{filter:invert(1);}}
+@media screen and (prefers-color-scheme:dark){
+	*{filter:invert(1);}
+	body{background-color:#000;}
+}
 </style>
 <img src="4.png" id="img">
 <script>
