--- a/app/index.html
+++ b/app/index.html
@@ -61,3 +61,32 @@ function filter(query){
 <a href="14.html">14. โมเสส<br><i>Moses</i><br></a>
 <a href="15.html">15. ภัยพิบัติและปัสคา<br><i>Plague and Passover</i><br></a>
 <a href="16.html">16. พระเจ้าทรงแยกน้ำทะเล<br><i>God splits the sea</i><br></a>
+<a href="17.html">17. 17<br><i>17</i><br></a>
+<a href="18.html">18. 18<br><i>18</i><br></a>
+<a href="19.html">19. 19<br><i>19</i><br></a>
+<a href="20.html">20. 20<br><i>20</i><br></a>
+<a href="21.html">21. 21<br><i>21</i><br></a>
+<a href="22.html">22. 22<br><i>22</i><br></a>
+<a href="23.html">23. 23<br><i>23</i><br></a>
+<a href="24.html">24. 24<br><i>24</i><br></a>
+<a href="25.html">25. 25<br><i>25</i><br></a>
+<a href="26.html">26. 26<br><i>26</i><br></a>
+<a href="27.html">27. 27<br><i>27</i><br></a>
+<a href="28.html">28. 28<br><i>28</i><br></a>
+<a href="29.html">29. 29<br><i>29</i><br></a>
+<a href="30.html">30. 30<br><i>30</i><br></a>
+<a href="31.html">31. 31<br><i>31</i><br></a>
+<a href="32.html">32. 32<br><i>32</i><br></a>
+<a href="33.html">33. 33<br><i>33</i><br></a>
+<a href="34.html">34. 34<br><i>34</i><br></a>
+<a href="35.html">35. 35<br><i>35</i><br></a>
+<a href="36.html">36. 36<br><i>36</i><br></a>
+<a href="37.html">37. 37<br><i>37</i><br></a>
+<a href="38.html">38. 38<br><i>38</i><br></a>
+<a href="39.html">39. 39<br><i>39</i><br></a>
+<a href="40.html">40. 40<br><i>40</i><br></a>
+<a href="41.html">41. 41<br><i>41</i><br></a>
+<a href="42.html">42. 42<br><i>42</i><br></a>
+<a href="43.html">43. 43<br><i>43</i><br></a>
+<a href="44.html">44. 44<br><i>44</i><br></a>
+<a href="45.html">45. 45<br><i>45</i><br></a>
