--- a/app/22.html
+++ b/app/22.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>%1. %2 %3</title>
+<title>22. 22 22</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
@@ -9,5 +9,8 @@ img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50v
 	body{background-color:#000;}
 }
 </style>
-<img src="%1.png" id="img">
+<img border="3" src="22.png" id="img">
 <script>
+document.addEventListener('keypress', function(){location.href='index.html';});
+document.addEventListener('click', function(){location.href='index.html';});
+</script>
