Distinguish no-audio

--- a/app/40.html
+++ b/app/40.html
@@ -11,8 +11,7 @@ img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50v
 </style>
 <img src="40.png" id="img">
 <script>
-var img=document.getElementById('img');
-img.setAttribute('border', '3px solid yellow');
+document.getElementById('img').style.border='5px solid red';
 document.addEventListener('keypress', function(){location.href='index.html';});
 document.addEventListener('click', function(){location.href='index.html';});
 </script>
