Renumber and names

--- a/app/16.html
+++ b/app/16.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>16. พระเจ้าทรงแยกน้ำทะเล God splits the sea</title>
+<title>16. พระเจ้าทรงแยกน้ำทะเล Crossing the Red Sea</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
