--- a/app/3.html
+++ b/app/3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>3. พระเจ้าสร้างเทวาตุตา God creates angels</title>
+<title>3. พระเจ้าสร้างเทวาตุตา Angels and spirits</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
