--- a/app/30.html
+++ b/app/30.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>30. 30 30</title>
+<title>30. พระเยซูมีอำนาจเหนือธรรมชาติ Jesus calms the storm</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
