--- a/app/32.html
+++ b/app/32.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>32. 32 32</title>
+<title>32. เลี้ยงคนห้าพันคน Jesus feeds the 5000</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
