--- a/app/6.html
+++ b/app/6.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>6. มนุษย์ทำบาป Mankind falls</title>
+<title>6. มนุษย์ทำบาป The Fall</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
