--- a/app/index.html
+++ b/app/index.html
@@ -45,48 +45,45 @@ function filter(query){
 	}
 }
 </script>
-<a href="1.html">1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง<br><i>God before all</i><br></a>
-<a href="2.html">2. พระคัมภีร์ หนังสือของพระเจ้า<br><i>Bible, book of God</i><br></a>
-<a href="3.html">3. พระเจ้าสร้างเทวาตุตา<br><i>God creates angels</i><br></a>
+<a href="1.html">1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง<br><i>God</i><br></a>
+<a href="2.html">2. พระคัมภีร์ หนังสือของพระเจ้า<br><i>The Bible</i><br></a>
+<a href="3.html">3. พระเจ้าสร้างเทวาตุตา<br><i>Angels and spirits</i><br></a>
 <a href="4.html">4. การเนรมิตสร้างโลก<br><i>Creation</i><br></a>
-<a href="5.html">5. พระเจ้าสร้างมนุษย์<br><i>God creates mankind</i><br></a>
-<a href="6.html">6. มนุษย์ทำบาป<br><i>Mankind falls</i><br></a>
+<a href="5.html">5. พระเจ้าสร้างมนุษย์<br><i>The Creation of Man</i><br></a>
+<a href="6.html">6. มนุษย์ทำบาป<br><i>The Fall</i><br></a>
 <a href="7.html">7. การฆ่าคนอันแรก<br><i>Cain and Abel</i><br></a>
-<a href="8.html">8. น้ำท่วมโลก<br><i>Flood</i><br></a>
-<a href="9.html">9. หอบาเบล<br><i>Tower of Babel</i><br></a>
+<a href="8.html">8. น้ำท่วมโลก<br><i>The Flood</i><br></a>
+<a href="9.html">9. หอบาเบล<br><i>The Tower of Babel</i><br></a>
 <a href="10.html">10. พระเจ้าทรงเรียกอับราฮาม<br><i>God calls Abraham</i><br></a>
 <a href="11.html">11. อิสอัคบุตรแห่งพระสัญญา<br><i>Isaac, son of promise</i><br></a>
 <a href="12.html">12. ยาโคบ<br><i>Jacob</i><br></a>
 <a href="13.html">13. โยเซฟ<br><i>Joseph</i><br></a>
 <a href="14.html">14. โมเสส<br><i>Moses</i><br></a>
 <a href="15.html">15. ภัยพิบัติและปัสคา<br><i>Plague and Passover</i><br></a>
-<a href="16.html">16. พระเจ้าทรงแยกน้ำทะเล<br><i>God splits the sea</i><br></a>
-<a href="17.html">17. 17<br><i>17</i><br></a>
-<a href="18.html">18. 18<br><i>18</i><br></a>
-<a href="19.html">19. 19<br><i>19</i><br></a>
-<a href="20.html">20. 20<br><i>20</i><br></a>
-<a href="21.html">21. 21<br><i>21</i><br></a>
-<a href="22.html">22. 22<br><i>22</i><br></a>
-<a href="23.html">23. 23<br><i>23</i><br></a>
-<a href="24.html">24. 24<br><i>24</i><br></a>
-<a href="25.html">25. 25<br><i>25</i><br></a>
-<a href="26.html">26. 26<br><i>26</i><br></a>
-<a href="27.html">27. 27<br><i>27</i><br></a>
-<a href="28.html">28. 28<br><i>28</i><br></a>
-<a href="29.html">29. 29<br><i>29</i><br></a>
-<a href="30.html">30. 30<br><i>30</i><br></a>
-<a href="31.html">31. 31<br><i>31</i><br></a>
-<a href="32.html">32. 32<br><i>32</i><br></a>
-<a href="33.html">33. 33<br><i>33</i><br></a>
-<a href="34.html">34. 34<br><i>34</i><br></a>
-<a href="35.html">35. 35<br><i>35</i><br></a>
-<a href="36.html">36. 36<br><i>36</i><br></a>
-<a href="37.html">37. 37<br><i>37</i><br></a>
-<a href="38.html">38. 38<br><i>38</i><br></a>
-<a href="39.html">39. 39<br><i>39</i><br></a>
-<a href="40.html">40. 40<br><i>40</i><br></a>
-<a href="41.html">41. 41<br><i>41</i><br></a>
-<a href="42.html">42. 42<br><i>42</i><br></a>
-<a href="43.html">43. 43<br><i>43</i><br></a>
-<a href="44.html">44. 44<br><i>44</i><br></a>
-<a href="45.html">45. 45<br><i>45</i><br></a>
+<a href="16.html">16. พระเจ้าทรงแยกน้ำทะเล<br><i>Crossing the Red Sea</i><br></a>
+<a href="17.html">17. มานา<br><i>Mana in the wilderness</i><br></a>
+<a href="18.html">18. บัญญัติ<br><i>The 10 Commandments</i><br></a>
+<a href="19.html">19. เต้นพลับพลา-เครื่องบูชา<br><i>The tabernacle</i><br></a>
+<a href="20.html">20. สายลับสิบสองคน<br><i>The 12 spies</i><br></a>
+<a href="21.html">21. งูทองสัมฤทธิ์<br><i>The Bronze Serpent</i><br></a>
+<a href="22.html">22. รูปปั้น<br><i>Idols</i><br></a>
+<a href="23.html">23. โยนาห์<br><i>Jonah</i><br></a>
+<a href="24.html">24. คำพยากรณ์<br><i>Prophecies</i><br></a>
+<a href="25.html">25. ดาเนียล<br><i>Daniel</i><br></a>
+<a href="26.html">26. กำเนิดพระเยซู<br><i>The birth of Jesus</i><br></a>
+<a href="27.html">27. พระเยซูรับบัพติศมา<br><i>The baptism of Jesu</i><br></a>
+<a href="28.html">28. สาวกสิบสองคน<br><i>The 12 disciples</i><br></a>
+<a href="29.html">29. พระเยซูรักษาคนง่อย<br><i>Jesus heals the paralytic</i><br></a>
+<a href="30.html">30. พระเยซูมีอำนาจเหนือธรรมชาติ<br><i>Jesus calms the storm</i><br></a>
+<a href="31.html">31. พระเยซูมีอำนาจเหนือผี<br><i>Jesus casts out demons</i><br></a>
+<a href="32.html">32. เลี้ยงคนห้าพันคน<br><i>Jesus feeds the 5000</i><br></a>
+<a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย<br><i>Lazarus raised from the dead</i><br></a>
+<a href="34.html">34. เศรษฐีกับลาซารัส<br><i>Lazarus and the rich man</i><br></a>
+<a href="35.html">35. อาหารมื้อสุดท้าย<br><i>The last supper</i><br></a>
+<a href="36.html">36. พระเยซูถูกตรึงที่กางเขน<br><i>The crucifixion</i><br></a>
+<a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย<br><i>The Resurrection</i><br></a>
+<a href="38.html">38. พระเยซูขึ้นสู่สวรรค์<br><i>The Ascension</i><br></a>
+<a href="39.html">39. การเสด็จมาครั้งที่สอง<br><i>The Second Coming</i><br></a>
+<a href="40.html">40. พระวิญญาณบริสุทธิ์<br><i>The Holy Spirit</i><br></a>
+<a href="41.html">41. พระคริสตจักร<br><i>The Church</i><br></a>
+<a href="42.html">42. การข่มเหง<br><i>Persecution</i><br></a>
