--- a/app/1.html
+++ b/app/1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง God before all</title>
+<title>1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง God</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
