--- a/app/19.html
+++ b/app/19.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>19. 19 19</title>
+<title>19. เต้นพลับพลา-เครื่องบูชา The tabernacle</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
