--- a/app/2.html
+++ b/app/2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>2. พระคัมภีร์ หนังสือของพระเจ้า Bible, book of God</title>
+<title>2. พระคัมภีร์ หนังสือของพระเจ้า The Bible</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
