--- a/app/20.html
+++ b/app/20.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>20. 20 20</title>
+<title>20. สายลับสิบสองคน The 12 spies</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
