--- a/app/21.html
+++ b/app/21.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>21. 21 21</title>
+<title>21. งูทองสัมฤทธิ์ The Bronze Serpent</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
