--- a/app/26.html
+++ b/app/26.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>26. 26 26</title>
+<title>26. กำเนิดพระเยซู The birth of Jesus</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
