--- a/app/27.html
+++ b/app/27.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>27. 27 27</title>
+<title>27. พระเยซูรับบัพติศมา The baptism of Jesu</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
