--- a/app/29.html
+++ b/app/29.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>29. 29 29</title>
+<title>29. พระเยซูรักษาคนง่อย Jesus heals the paralytic</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
