--- a/app/31.html
+++ b/app/31.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>31. 31 31</title>
+<title>31. พระเยซูมีอำนาจเหนือผี Jesus casts out demons</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
