--- a/app/33.html
+++ b/app/33.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>33. 33 33</title>
+<title>33. พระเยซูมีอำนาจเหนือความตาย Lazarus raised from the dead</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
