--- a/app/34.html
+++ b/app/34.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>34. 34 34</title>
+<title>34. เศรษฐีกับลาซารัส Lazarus and the rich man</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
