--- a/app/35.html
+++ b/app/35.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>35. 35 35</title>
+<title>35. อาหารมื้อสุดท้าย The last supper</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
