--- a/app/36.html
+++ b/app/36.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>36. 36 36</title>
+<title>36. พระเยซูถูกตรึงที่กางเขน The crucifixion</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
