--- a/app/37.html
+++ b/app/37.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>37. 37 37</title>
+<title>37. พระเยซูเป็นขึ้นจากความตาย The Resurrection</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
