--- a/app/38.html
+++ b/app/38.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>38. 38 38</title>
+<title>38. พระเยซูขึ้นสู่สวรรค์ The Ascension</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
