--- a/app/39.html
+++ b/app/39.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>39. 39 39</title>
+<title>39. การเสด็จมาครั้งที่สอง The Second Coming</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
