--- a/app/40.html
+++ b/app/40.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>40. 40 40</title>
+<title>40. พระวิญญาณบริสุทธิ์ The Holy Spirit</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
