--- a/app/5.html
+++ b/app/5.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>5. พระเจ้าสร้างมนุษย์ God creates mankind</title>
+<title>5. พระเจ้าสร้างมนุษย์ The Creation of Man</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
