--- a/app/8.html
+++ b/app/8.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>8. น้ำท่วมโลก Flood</title>
+<title>8. น้ำท่วมโลก The Flood</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
