--- a/app/9.html
+++ b/app/9.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>9. หอบาเบล Tower of Babel</title>
+<title>9. หอบาเบล The Tower of Babel</title>
 <link rel="icon" href="icon.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
