--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@ function filter(query){
 <a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย<br><i>Lazarus raised from the dead</i><br></a>
 <a href="34.html">34. เศรษฐีกับลาซารัส<br><i>Lazarus and the rich man</i><br></a>
 <a href="35.html">35. อาหารมื้อสุดท้าย<br><i>The last supper</i><br></a>
-<a href="36.html">36. พระเยซูถูกตรึงที่กางเขน<br><i>The crucifixion</i><br></a>
+<a href="36.html">36. พระเยซูถูกตรึงบนไม้กางเขน<br><i>The crucifixion</i><br></a>
 <a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย<br><i>The Resurrection</i><br></a>
 <a href="38.html">38. พระเยซูขึ้นสู่สวรรค์<br><i>The Ascension</i><br></a>
 <a href="39.html">39. การเสด็จมาครั้งที่สอง<br><i>The Second Coming</i><br></a>
