--- a/app/36.html
+++ b/app/36.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
 <title>36. พระเยซูถูกตรึงบนไม้กางเขน The crucifixion</title>
-<link rel="icon" href="icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
 @media screen and (prefers-color-scheme:dark){
