--- a/app/25.html
+++ b/app/25.html
@@ -4,10 +4,7 @@
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
-@media screen and (prefers-color-scheme:dark){
-	img{filter:invert(1);}
-	body{background-color:#000;}
-}
+@media (prefers-color-scheme:dark){html{filter:invert(1);}}
 </style>
 <img src="25.png" id="img">
 <script>
