--- a/app/8.html
+++ b/app/8.html
@@ -4,21 +4,18 @@
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
-@media screen and (prefers-color-scheme:dark){
-	img{filter:invert(1);}
-	body{background-color:#000;}
-}
+@media (prefers-color-scheme:dark){html{filter:invert(1);}}
 </style>
 <img src="8.png" id="img">
 <script>
-const SWIPE_MAX_MS=500;
+const SWIPE_MAX_MS=1500;
 const SWIPE_MIN_PX=100;
 var a=new Audio();
 a.src='8.mp3';
 var h=0;
 var img=document.getElementById('img');
 document.addEventListener('keypress', function(){location.href='index.html';});
-document.addEventListener('dblclick', function(){a.currentTime=0;});
+document.addEventListener('dblclick', function(){location.href='index.html';});
 document.addEventListener('click', function(){if(a.paused) a.play(); else a.pause();});
 document.addEventListener('touchstart', touchStart);
 document.addEventListener('touchend', touchEnd);
