--- a/app/30.html
+++ b/app/30.html
@@ -3,8 +3,9 @@
 <title>30. พระเยซูมีอำนาจเหนือธรรมชาติ Jesus calms the storm</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
+body{background-color:#fff;}
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
-@media (prefers-color-scheme:dark){html{filter:invert(1);}}
+@media (prefers-color-scheme:dark){html{filter:invert();}}
 </style>
 <img src="30.png" id="img">
 <script>
