--- a/app/1.html
+++ b/app/1.html
@@ -17,7 +17,7 @@ var h=0;
 var img=document.getElementById('img');
 document.addEventListener('keypress', function(){location.href='index.html';});
 document.addEventListener('dblclick', function(){location.href='index.html';});
-document.addEventListener('click', function(){if(a.paused) a.play(); else a.pause();});
+document.addEventListener('click', function(){if(a.paused) setTimeout('a.play()', 500); else a.pause();});
 document.addEventListener('touchstart', touchStart);
 document.addEventListener('touchend', touchEnd);
 function touchStart(e){
