--- a/app/17.html
+++ b/app/17.html
@@ -6,6 +6,7 @@
 body{background-color:#fff;}
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
 @media (prefers-color-scheme:dark){html{filter:invert();}}
+@media (orientation:landscape){img{transform:rotate(90deg);}}
 </style>
 <img src="17.png" id="img">
 <script>
