--- a/app/2.html
+++ b/app/2.html
@@ -6,18 +6,20 @@
 body{background-color:#fff;}
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
 @media (prefers-color-scheme:dark){html{filter:invert();}}
+@media (orientation:landscape){img{transform:rotate(90deg);}}
 </style>
 <img src="2.png" id="img">
 <script>
 const SWIPE_MAX_MS=1500;
 const SWIPE_MIN_PX=100;
+const DELAY_MS=500;
 var a=new Audio();
 a.src='2.mp3';
 var h=0;
 var img=document.getElementById('img');
-document.addEventListener('keypress', function(){location.href='index.html';});
-document.addEventListener('dblclick', function(){location.href='index.html';});
-document.addEventListener('click', function(){if(a.paused) setTimeout('a.play()', 500); else a.pause();});
+document.addEventListener('keypress', function(){location.href='index.html'});
+document.addEventListener('dblclick', function(){location.href='index.html'});
+document.addEventListener('click', function(){if(a.paused) setTimeout(()=>{a.play()}, DELAY_MS); else a.pause()});
 document.addEventListener('touchstart', touchStart);
 document.addEventListener('touchend', touchEnd);
 function touchStart(e){
