--- a/app/34.html
+++ b/app/34.html
@@ -4,9 +4,9 @@
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
-img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width: 100vw;}
+img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width:100vw;}
 @media (prefers-color-scheme:dark){html{filter:invert();}}
-@media (orientation:landscape){img{transform:rotate(90deg);}}
+@media (orientation:landscape){img{transform:rotate(90deg) scale(1.41) translateX(41%);}}
 </style>
 <img src="34.png" id="img">
 <script>
