--- a/app/37.html
+++ b/app/37.html
@@ -6,7 +6,7 @@
 body{background-color:#fff;}
 img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50vw; max-width:100vw; width:100vw;}
 @media (prefers-color-scheme:dark){html{filter:invert();}}
-@media (orientation:landscape){img{transform:rotate(90deg) scale(1.41) translateX(41%);}}
+@media (orientation:portrait){img{transform:rotate(90deg) scale(1.41) translateX(41%);}}
 </style>
 <img src="37.png" id="img">
 <script>
