--- a/app/28.html
+++ b/app/28.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>28. สาวกสิบสองคน The 12 disciples</title>
+<title>28. สาวกสิบสองคน The twelve Disciples</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
