--- a/app/32.html
+++ b/app/32.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>32. เลี้ยงคนห้าพันคน Jesus feeds the 5000</title>
+<title>32. เลี้ยงคนห้าพันคน Jesus feeds the five thousand</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
