--- a/app/35.html
+++ b/app/35.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>35. อาหารมื้อสุดท้าย The last supper</title>
+<title>35. อาหารมื้อสุดท้าย The Last Supper</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
