--- a/app/36.html
+++ b/app/36.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>36. พระเยซูถูกตรึงบนไม้กางเขน The crucifixion</title>
+<title>36. พระเยซูถูกตรึงบนไม้กางเขน The Crucifixion</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
