--- a/app/19.html
+++ b/app/19.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
-<title>19. เต้นพลับพลา-เครื่องบูชา The tabernacle</title>
+<title>19. เต้นพลับพลา-เครื่องบูชา The Tabernacle</title>
 <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <style>
 body{background-color:#fff;}
@@ -10,7 +10,49 @@ img{position:relative; left:50%; right:50%; margin-left:-50vw; margin-right:-50v
 </style>
 <img src="19.png" id="img">
 <script>
-document.getElementById('img').style.border='5px solid red';
-document.addEventListener('keypress', function(){location.href='index.html';});
-document.addEventListener('click', function(){location.href='index.html';});
+const SWIPE_MAX_MS=1500;
+const SWIPE_MIN_PX=100;
+const DELAY_MS=500;
+var a=new Audio();
+a.src='19.mp3';
+var h=0;
+var img=document.getElementById('img');
+document.addEventListener('keypress', function(){location.href='index.html'});
+document.addEventListener('dblclick', function(){location.href='index.html'});
+document.addEventListener('click', function(){if(a.paused) setTimeout(()=>{a.play()}, DELAY_MS); else a.pause()});
+document.addEventListener('touchstart', touchStart);
+document.addEventListener('touchend', touchEnd);
+function touchStart(e){
+	e.preventDefault();
+	touchStartTime=Date.now();
+	X=e.touches[0].clientX;
+	Y=e.touches[0].clientY;
+}
+function touchEnd(e){
+	const touchEndTime=Date.now();
+	swipe(e, touchEndTime-touchStartTime);
+}
+function swipe(e, duration){
+	const endX=e.changedTouches[0].clientX;
+	const endY=e.changedTouches[0].clientY;
+	if(duration<SWIPE_MAX_MS){
+		if(Y-endY>SWIPE_MIN_PX){
+			if(h){
+				img.setAttribute('src', '19.png');
+				h=0;
+			}else location.href='index.html';
+		}
+		else if(endX-X>SWIPE_MIN_PX) a.currentTime+=20;
+		else if(X-endX>SWIPE_MIN_PX) a.currentTime-=20;
+		else if(endY-Y>SWIPE_MIN_PX){
+			if(h){
+				img.setAttribute('src', '19.png');
+				h=0;
+			}else{
+				img.setAttribute('src', 'help.png');
+				h=1;
+			}
+		};
+	}
+}
 </script>
