Icon at the end

--- a/app/index.html
+++ b/app/index.html
@@ -45,45 +45,45 @@ function filter(query){
 	}
 }
 </script>
-<a href="1.html">&#128266; 1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง<br><i>God</i><br></a>
-<a href="2.html">&#128266; 2. พระคัมภีร์ หนังสือของพระเจ้า<br><i>The Bible</i><br></a>
-<a href="3.html">&#128266; 3. พระเจ้าสร้างเทวาตุตา<br><i>Angels and spirits</i><br></a>
-<a href="4.html">&#128266; 4. การเนรมิตสร้างโลก<br><i>Creation</i><br></a>
-<a href="5.html">&#128266; 5. พระเจ้าสร้างมนุษย์<br><i>The Creation of Man</i><br></a>
-<a href="6.html">&#128266; 6. มนุษย์ทำบาป<br><i>The Fall</i><br></a>
-<a href="7.html">&#128266; 7. การฆ่าคนอันแรก<br><i>Cain and Abel</i><br></a>
-<a href="8.html">&#128266; 8. น้ำท่วมโลก<br><i>The Flood</i><br></a>
-<a href="9.html">&#128266; 9. หอบาเบล<br><i>The Tower of Babel</i><br></a>
-<a href="10.html">&#128266; 10. พระเจ้าทรงเรียกอับราฮาม<br><i>God calls Abraham</i><br></a>
-<a href="11.html">&#128266; 11. อิสอัคบุตรแห่งพระสัญญา<br><i>Isaac, son of promise</i><br></a>
-<a href="12.html">&#128266; 12. ยาโคบ<br><i>Jacob</i><br></a>
-<a href="13.html">&#128266; 13. โยเซฟ<br><i>Joseph</i><br></a>
-<a href="14.html">&#128266; 14. โมเสส<br><i>Moses</i><br></a>
-<a href="15.html">&#128266; 15. ภัยพิบัติและปัสคา<br><i>Plague and Passover</i><br></a>
-<a href="16.html">&#128266; 16. พระเจ้าทรงแยกน้ำทะเล<br><i>Crossing the Red Sea</i><br></a>
-<a href="17.html">&#128266; 17. มานา<br><i>Mana in the wilderness</i><br></a>
-<a href="18.html">&#128266; 18. บัญญัติ<br><i>The 10 Commandments</i><br></a>
-<a href="19.html">&#128266; 19. เต้นพลับพลา-เครื่องบูชา<br><i>The Tabernacle</i><br></a>
-<a href="20.html">&#128266; 20. สายลับสิบสองคน<br><i>The twelve spies</i><br></a>
-<a href="21.html">&#128266; 21. งูทองสัมฤทธิ์<br><i>The bronze serpent</i><br></a>
-<a href="22.html">&#128266; 22. รูปปั้น<br><i>Idols</i><br></a>
-<a href="23.html">&#128266; 23. โยนาห์<br><i>Jonah</i><br></a>
-<a href="24.html">&#128266; 24. คำพยากรณ์<br><i>Prophecies</i><br></a>
-<a href="25.html"> 25. ดาเนียล<br><i>Daniel</i><br></a>
-<a href="26.html"> 26. กำเนิดพระเยซู<br><i>The birth of Jesus</i><br></a>
-<a href="27.html"> 27. พระเยซูรับบัพติศมา<br><i>The baptism of Jesu</i><br></a>
-<a href="28.html"> 28. สาวกสิบสองคน<br><i>The twelve Disciples</i><br></a>
-<a href="29.html"> 29. พระเยซูรักษาคนง่อย<br><i>Jesus heals the paralytic</i><br></a>
-<a href="30.html"> 30. พระเยซูมีอำนาจเหนือธรรมชาติ<br><i>Jesus calms the storm</i><br></a>
-<a href="31.html"> 31. พระเยซูมีอำนาจเหนือผี<br><i>Jesus casts out demons</i><br></a>
-<a href="32.html"> 32. เลี้ยงคนห้าพันคน<br><i>Jesus feeds the five thousand</i><br></a>
-<a href="33.html"> 33. พระเยซูมีอำนาจเหนือความตาย<br><i>Lazarus raised from the dead</i><br></a>
-<a href="34.html"> 34. เศรษฐีกับลาซารัส<br><i>Lazarus and the rich man</i><br></a>
-<a href="35.html"> 35. อาหารมื้อสุดท้าย<br><i>The Last Supper</i><br></a>
-<a href="36.html"> 36. พระเยซูถูกตรึงบนไม้กางเขน<br><i>The Crucifixion</i><br></a>
-<a href="37.html"> 37. พระเยซูเป็นขึ้นจากความตาย<br><i>The Resurrection</i><br></a>
-<a href="38.html"> 38. พระเยซูขึ้นสู่สวรรค์<br><i>The Ascension</i><br></a>
-<a href="39.html"> 39. การเสด็จมาครั้งที่สอง<br><i>The Second Coming</i><br></a>
-<a href="40.html"> 40. พระวิญญาณบริสุทธิ์<br><i>The Holy Spirit</i><br></a>
-<a href="41.html"> 41. พระคริสตจักร<br><i>The Church</i><br></a>
-<a href="42.html"> 42. การข่มเหง<br><i>Persecution</i><br></a>
+<a href="1.html">1. พระเจ้าผู้เป็นอยู่ก่อนทุกสิ่ง &#128266;<br><i>God</i><br></a>
+<a href="2.html">2. พระคัมภีร์ หนังสือของพระเจ้า &#128266;<br><i>The Bible</i><br></a>
+<a href="3.html">3. พระเจ้าสร้างเทวาตุตา &#128266;<br><i>Angels and spirits</i><br></a>
+<a href="4.html">4. การเนรมิตสร้างโลก &#128266;<br><i>Creation</i><br></a>
+<a href="5.html">5. พระเจ้าสร้างมนุษย์ &#128266;<br><i>The Creation of Man</i><br></a>
+<a href="6.html">6. มนุษย์ทำบาป &#128266;<br><i>The Fall</i><br></a>
+<a href="7.html">7. การฆ่าคนอันแรก &#128266;<br><i>Cain and Abel</i><br></a>
+<a href="8.html">8. น้ำท่วมโลก &#128266;<br><i>The Flood</i><br></a>
+<a href="9.html">9. หอบาเบล &#128266;<br><i>The Tower of Babel</i><br></a>
+<a href="10.html">10. พระเจ้าทรงเรียกอับราฮาม &#128266;<br><i>God calls Abraham</i><br></a>
+<a href="11.html">11. อิสอัคบุตรแห่งพระสัญญา &#128266;<br><i>Isaac, son of promise</i><br></a>
+<a href="12.html">12. ยาโคบ &#128266;<br><i>Jacob</i><br></a>
+<a href="13.html">13. โยเซฟ &#128266;<br><i>Joseph</i><br></a>
+<a href="14.html">14. โมเสส &#128266;<br><i>Moses</i><br></a>
+<a href="15.html">15. ภัยพิบัติและปัสคา &#128266;<br><i>Plague and Passover</i><br></a>
+<a href="16.html">16. พระเจ้าทรงแยกน้ำทะเล &#128266;<br><i>Crossing the Red Sea</i><br></a>
+<a href="17.html">17. มานา &#128266;<br><i>Mana in the wilderness</i><br></a>
+<a href="18.html">18. บัญญัติ &#128266;<br><i>The 10 Commandments</i><br></a>
+<a href="19.html">19. เต้นพลับพลา-เครื่องบูชา &#128266;<br><i>The Tabernacle</i><br></a>
+<a href="20.html">20. สายลับสิบสองคน &#128266;<br><i>The twelve spies</i><br></a>
+<a href="21.html">21. งูทองสัมฤทธิ์ &#128266;<br><i>The bronze serpent</i><br></a>
+<a href="22.html">22. รูปปั้น &#128266;<br><i>Idols</i><br></a>
+<a href="23.html">23. โยนาห์ &#128266;<br><i>Jonah</i><br></a>
+<a href="24.html">24. คำพยากรณ์ &#128266;<br><i>Prophecies</i><br></a>
+<a href="25.html">25. ดาเนียล <br><i>Daniel</i><br></a>
+<a href="26.html">26. กำเนิดพระเยซู <br><i>The birth of Jesus</i><br></a>
+<a href="27.html">27. พระเยซูรับบัพติศมา <br><i>The baptism of Jesu</i><br></a>
+<a href="28.html">28. สาวกสิบสองคน <br><i>The twelve Disciples</i><br></a>
+<a href="29.html">29. พระเยซูรักษาคนง่อย <br><i>Jesus heals the paralytic</i><br></a>
+<a href="30.html">30. พระเยซูมีอำนาจเหนือธรรมชาติ <br><i>Jesus calms the storm</i><br></a>
+<a href="31.html">31. พระเยซูมีอำนาจเหนือผี <br><i>Jesus casts out demons</i><br></a>
+<a href="32.html">32. เลี้ยงคนห้าพันคน <br><i>Jesus feeds the five thousand</i><br></a>
+<a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย <br><i>Lazarus raised from the dead</i><br></a>
+<a href="34.html">34. เศรษฐีกับลาซารัส <br><i>Lazarus and the rich man</i><br></a>
+<a href="35.html">35. อาหารมื้อสุดท้าย <br><i>The Last Supper</i><br></a>
+<a href="36.html">36. พระเยซูถูกตรึงบนไม้กางเขน <br><i>The Crucifixion</i><br></a>
+<a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย <br><i>The Resurrection</i><br></a>
+<a href="38.html">38. พระเยซูขึ้นสู่สวรรค์ <br><i>The Ascension</i><br></a>
+<a href="39.html">39. การเสด็จมาครั้งที่สอง <br><i>The Second Coming</i><br></a>
+<a href="40.html">40. พระวิญญาณบริสุทธิ์ <br><i>The Holy Spirit</i><br></a>
+<a href="41.html">41. พระคริสตจักร <br><i>The Church</i><br></a>
+<a href="42.html">42. การข่มเหง <br><i>Persecution</i><br></a>
