--- a/app/index.html
+++ b/app/index.html
@@ -70,13 +70,13 @@ function filter(query){
 <a href="23.html">23. โยนาห์ &#128266;<br><i>Jonah</i><br></a>
 <a href="24.html">24. คำพยากรณ์ &#128266;<br><i>Prophecies</i><br></a>
 <a href="25.html">25. ดาเนียล <br><i>Daniel</i><br></a>
-<a href="26.html">26. กำเนิดพระเยซู <br><i>The birth of Jesus</i><br></a>
-<a href="27.html">27. พระเยซูรับบัพติศมา <br><i>The baptism of Jesu</i><br></a>
-<a href="28.html">28. สาวกสิบสองคน <br><i>The twelve Disciples</i><br></a>
-<a href="29.html">29. พระเยซูรักษาคนง่อย <br><i>Jesus heals the paralytic</i><br></a>
-<a href="30.html">30. พระเยซูมีอำนาจเหนือธรรมชาติ <br><i>Jesus calms the storm</i><br></a>
-<a href="31.html">31. พระเยซูมีอำนาจเหนือผี <br><i>Jesus casts out demons</i><br></a>
-<a href="32.html">32. เลี้ยงคนห้าพันคน <br><i>Jesus feeds the five thousand</i><br></a>
+<a href="26.html">26. กำเนิดพระเยซู &#128266;<br><i>The birth of Jesus</i><br></a>
+<a href="27.html">27. พระเยซูรับบัพติศมา &#128266;<br><i>The baptism of Jesu</i><br></a>
+<a href="28.html">28. สาวกสิบสองคน &#128266;<br><i>The twelve Disciples</i><br></a>
+<a href="29.html">29. พระเยซูรักษาคนง่อย &#128266;<br><i>Jesus heals the paralytic</i><br></a>
+<a href="30.html">30. พระเยซูมีอำนาจเหนือธรรมชาติ &#128266;<br><i>Jesus calms the storm</i><br></a>
+<a href="31.html">31. พระเยซูมีอำนาจเหนือผี &#128266;<br><i>Jesus casts out demons</i><br></a>
+<a href="32.html">32. เลี้ยงคนห้าพันคน &#128266;<br><i>Jesus feeds the five thousand</i><br></a>
 <a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย <br><i>Lazarus raised from the dead</i><br></a>
 <a href="34.html">34. เศรษฐีกับลาซารัส <br><i>Lazarus and the rich man</i><br></a>
 <a href="35.html">35. อาหารมื้อสุดท้าย <br><i>The Last Supper</i><br></a>
