--- a/app/index.html
+++ b/app/index.html
@@ -77,11 +77,11 @@ function filter(query){
 <a href="30.html">30. พระเยซูมีอำนาจเหนือธรรมชาติ &#128266;<br><i>Jesus calms the storm</i><br></a>
 <a href="31.html">31. พระเยซูมีอำนาจเหนือผี &#128266;<br><i>Jesus casts out demons</i><br></a>
 <a href="32.html">32. เลี้ยงคนห้าพันคน &#128266;<br><i>Jesus feeds the five thousand</i><br></a>
-<a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย <br><i>Lazarus raised from the dead</i><br></a>
-<a href="34.html">34. เศรษฐีกับลาซารัส <br><i>Lazarus and the rich man</i><br></a>
-<a href="35.html">35. อาหารมื้อสุดท้าย <br><i>The Last Supper</i><br></a>
-<a href="36.html">36. พระเยซูถูกตรึงบนไม้กางเขน <br><i>The Crucifixion</i><br></a>
-<a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย <br><i>The Resurrection</i><br></a>
+<a href="33.html">33. พระเยซูมีอำนาจเหนือความตาย &#128266;<br><i>Lazarus raised from the dead</i><br></a>
+<a href="34.html">34. เศรษฐีกับลาซารัส &#128266;<br><i>Lazarus and the rich man</i><br></a>
+<a href="35.html">35. อาหารมื้อสุดท้าย &#128266;<br><i>The Last Supper</i><br></a>
+<a href="36.html">36. พระเยซูถูกตรึงบนไม้กางเขน &#128266;<br><i>The Crucifixion</i><br></a>
+<a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย &#128266;<br><i>The Resurrection</i><br></a>
 <a href="38.html">38. พระเยซูขึ้นสู่สวรรค์ <br><i>The Ascension</i><br></a>
 <a href="39.html">39. การเสด็จมาครั้งที่สอง <br><i>The Second Coming</i><br></a>
 <a href="40.html">40. พระวิญญาณบริสุทธิ์ <br><i>The Holy Spirit</i><br></a>
