--- a/app/index.html
+++ b/app/index.html
@@ -82,8 +82,8 @@ function filter(query){
 <a href="35.html">35. อาหารมื้อสุดท้าย &#128266;<br><i>The Last Supper</i><br></a>
 <a href="36.html">36. พระเยซูถูกตรึงบนไม้กางเขน &#128266;<br><i>The Crucifixion</i><br></a>
 <a href="37.html">37. พระเยซูเป็นขึ้นจากความตาย &#128266;<br><i>The Resurrection</i><br></a>
-<a href="38.html">38. พระเยซูขึ้นสู่สวรรค์ <br><i>The Ascension</i><br></a>
-<a href="39.html">39. การเสด็จมาครั้งที่สอง <br><i>The Second Coming</i><br></a>
-<a href="40.html">40. พระวิญญาณบริสุทธิ์ <br><i>The Holy Spirit</i><br></a>
-<a href="41.html">41. พระคริสตจักร <br><i>The Church</i><br></a>
-<a href="42.html">42. การข่มเหง <br><i>Persecution</i><br></a>
+<a href="38.html">38. พระเยซูขึ้นสู่สวรรค์ &#128266;<br><i>The Ascension</i><br></a>
+<a href="39.html">39. การเสด็จมาครั้งที่สอง &#128266;<br><i>The Second Coming</i><br></a>
+<a href="40.html">40. พระวิญญาณบริสุทธิ์ &#128266;<br><i>The Holy Spirit</i><br></a>
+<a href="41.html">41. พระคริสตจักร &#128266;<br><i>The Church</i><br></a>
+<a href="42.html">42. การข่มเหง &#128266;<br><i>Persecution</i><br></a>
