--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@ function filter(query){
 <a href="22.html">22. รูปปั้น &#128266;<br><i>Idols</i><br></a>
 <a href="23.html">23. โยนาห์ &#128266;<br><i>Jonah</i><br></a>
 <a href="24.html">24. คำพยากรณ์ &#128266;<br><i>Prophecies</i><br></a>
-<a href="25.html">25. ดาเนียล <br><i>Daniel</i><br></a>
+<a href="25.html">25. ดาเนียล &#128266;<br><i>Daniel</i><br></a>
 <a href="26.html">26. กำเนิดพระเยซู &#128266;<br><i>The birth of Jesus</i><br></a>
 <a href="27.html">27. พระเยซูรับบัพติศมา &#128266;<br><i>The baptism of Jesu</i><br></a>
 <a href="28.html">28. สาวกสิบสองคน &#128266;<br><i>The twelve Disciples</i><br></a>
